# log

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Event.h  Factory.h  GenericEvent.h  Manager.cpp  Manager.h  RingBuffer.h  Severity.h  Utility.cpp  Utility.h  Version.h.in
tests/: CMakeLists.txt  Test_Event.cpp  Test_Factory.cpp  Test_GenericEvent.cpp  Test_Manager.cpp  Test_RingBuffer.cpp
